--- a/Combined_VIF_analysis/HotspotsRevisited/HotspotRandomness.Rmd
+++ b/Combined_VIF_analysis/HotspotsRevisited/HotspotRandomness.Rmd
@@ -11,25 +11,77 @@ library(tidyverse)
 ```
 
 
+# win 1e5
+
 ```{r}
 
 
-# define_insertion_hotspots.py --insertions_tsv all_insertions_and_virus_content_merged.FILTERED.tsv.distilled.1e+07 --window_size 400000 --output outdir/9555.test --randomize
+# define_insertion_hotspots.py --insertions_tsv  all_insertions_and_virus_content_merged.FILTERED.tsv  --window_size 100000 --output outdir/1.test --min_ev_reads  1 --randomize
+
 # was run 10k times to generate the null distribution.
 
-data = read.table(gzfile("data/rand_cluster_size_counts.tsv.gz"), header=F, sep="\t")
+data_1e5 = read.table(gzfile("data/rand_cluster_size_counts.win_1e5.tsv.gz"), header=F, sep="\t")
 
-colnames(data) = c('trial', 'hotspot_size', 'num_hotspots')
+colnames(data_1e5) = c('trial', 'hotspot_size', 'num_hotspots')
 
-data = data %>% filter(hotspot_size > 1)
-```
+data_1e5 = data_1e5 %>% filter(hotspot_size > 1)
 
-```{r}
-
-data %>% ggplot(aes(x=as.factor(hotspot_size), y=num_hotspots)) + geom_boxplot() +
+data_1e5 %>% ggplot(aes(x=as.factor(hotspot_size), y=num_hotspots)) + geom_boxplot() +
   ggtitle("distribution of counts of hotspot sizes")
 
 ```
+
+
+
+
+
+
+
+# Win 1e6
+
+```{r}
+
+
+data_1e6 = read.table(gzfile("data/rand_cluster_size_counts.win_1e6.tsv.gz"), header=F, sep="\t")
+
+colnames(data_1e6) = c('trial', 'hotspot_size', 'num_hotspots')
+
+data_1e6 = data_1e6 %>% filter(hotspot_size > 1)
+
+median_data_1e6 = data_1e6 %>% group_by(hotspot_size) %>% summarize(median_hotspot_size = median(num_hotspots))
+
+
+data_1e6 %>% ggplot(aes(x=as.factor(hotspot_size), y=num_hotspots)) + geom_boxplot() +
+  ggtitle("distribution of counts of hotspot sizes")
+
+
+
+```
+
+
+```{r}
+
+combined_data = bind_rows(data_1e5 %>% mutate(winsize="1e5"),
+                          data_1e6 %>% mutate(winsize="1e6"))
+
+```
+
+
+```{r}
+
+combined_data %>%  ggplot(aes(x=as.factor(hotspot_size), y=num_hotspots, color=winsize)) + geom_boxplot() +
+  ggtitle("distribution of counts of hotspot sizes - random") +
+  scale_y_continuous(trans='log10')
+
+
+```
+
+
+
+
+
+
+
 
 
 ```{r}
@@ -45,6 +97,6 @@ frac_info
 
 ```
 
-So, having a hotspot with 8 samples is expected to occur at 0.014 probabily by random chance.
+
 
 
