--- a/Combined_VIF_analysis/HotspotsRevisited/HotspotRandomness.Rmd
+++ b/Combined_VIF_analysis/HotspotsRevisited/HotspotRandomness.Rmd
@@ -27,13 +27,29 @@ colnames(data_1e5) = c('trial', 'hotspot_size', 'num_hotspots')
 data_1e5 = data_1e5 %>% filter(hotspot_size > 1)
 
 data_1e5 %>% ggplot(aes(x=as.factor(hotspot_size), y=num_hotspots)) + geom_boxplot() +
-  ggtitle("distribution of counts of hotspot sizes")
+  ggtitle("distribution of counts of hotspot sizes (win=1e5")
 
 ```
 
 
+# Win 5e5
+
+```{r}
 
 
+data_5e5 = read.table(gzfile("data/rand_cluster_size_counts.win_5e5.tsv.gz"), header=F, sep="\t")
+
+colnames(data_5e5) = c('trial', 'hotspot_size', 'num_hotspots')
+
+data_5e5 = data_5e5 %>% filter(hotspot_size > 1)
+
+
+data_5e5 %>% ggplot(aes(x=as.factor(hotspot_size), y=num_hotspots)) + geom_boxplot() +
+  ggtitle("distribution of counts of hotspot sizes (win=5e5)")
+
+
+
+```
 
 
 
@@ -48,11 +64,9 @@ colnames(data_1e6) = c('trial', 'hotspot_size', 'num_hotspots')
 
 data_1e6 = data_1e6 %>% filter(hotspot_size > 1)
 
-median_data_1e6 = data_1e6 %>% group_by(hotspot_size) %>% summarize(median_hotspot_size = median(num_hotspots))
-
 
 data_1e6 %>% ggplot(aes(x=as.factor(hotspot_size), y=num_hotspots)) + geom_boxplot() +
-  ggtitle("distribution of counts of hotspot sizes")
+  ggtitle("distribution of counts of hotspot sizes (win=1e6)")
 
 
 
@@ -62,6 +76,7 @@ data_1e6 %>% ggplot(aes(x=as.factor(hotspot_size), y=num_hotspots)) + geom_boxpl
 ```{r}
 
 combined_data = bind_rows(data_1e5 %>% mutate(winsize="1e5"),
+                          data_5e5 %>% mutate(winsize="5e5"),
                           data_1e6 %>% mutate(winsize="1e6"))
 
 ```
@@ -69,7 +84,7 @@ combined_data = bind_rows(data_1e5 %>% mutate(winsize="1e5"),
 
 ```{r}
 
-combined_data %>%  ggplot(aes(x=as.factor(hotspot_size), y=num_hotspots, color=winsize)) + geom_boxplot() +
+combined_data %>%  ggplot(aes(x=as.factor(hotspot_size), y=num_hotspots, color=winsize)) + geom_boxplot(outlier.shape = NA) +
   ggtitle("distribution of counts of hotspot sizes - random") +
   scale_y_continuous(trans='log10')
 
