--- a/Combined_VIF_analysis/InsertionAnalysis/Shared_Insertion_Sites.Rmd
+++ b/Combined_VIF_analysis/InsertionAnalysis/Shared_Insertion_Sites.Rmd
@@ -21,6 +21,8 @@ insertions_data = insertions_data %>%
 
 nrow(insertions_data)
 
+# 33892
+
 ```
 
 ```{r}
@@ -69,6 +71,8 @@ shared_insertion_sites = left_join(shared_insertion_sites, insertions_data, by='
 
 shared_insertion_sites %>% select(insertion_token, participant, seqtype, cohort) %>% unique() %>% nrow()
 
+# 1258
+
 ```
 
 
@@ -103,6 +107,8 @@ shared_insertion_sites_diff_seqtypes = left_join(shared_insertion_sites_diff_seq
 
 shared_insertion_sites_diff_seqtypes  %>% select(participant, insertion_token, virus_coord, seqtype) %>% arrange(participant, insertion_token)
 
+# 563 rows
+
 ```
 
 
@@ -133,6 +139,15 @@ write.table(exact_matching_ortho_validations, file="exact_matching_ortho_validat
 ```{r}
 
 exact_matching_ortho_validations  %>% group_by(orthovalid_type) %>% tally()
+
+# HYB,RNA	3			
+# HYB,RNA,WGS	1			
+# HYB,WGS	6			
+# RNA,WGS	15			
+# RNA,WGS,WXS	27			
+# RNA,WXS	157			
+# WGS,WXS	50	
+
 ```
 
 
@@ -142,6 +157,7 @@ exact_matching_ortho_validations  %>% group_by(orthovalid_type) %>% tally()
 ## first remove the ortho-validated entries above.
 
 nrow(shared_insertion_sites)
+# 1277
 
 shared_insertion_sites_minus_orthovalid = left_join(shared_insertion_sites,
                                                     shared_insertion_sites_diff_seqtypes %>% 
@@ -152,6 +168,7 @@ shared_insertion_sites_minus_orthovalid = left_join(shared_insertion_sites,
   filter(is.na(orthovalid)) %>% select(-orthovalid)
                             
 nrow(shared_insertion_sites_minus_orthovalid)
+# 714
 
 ```
 
@@ -209,6 +226,8 @@ shared_insertion_sites_diff_participants %>%
 
 shared_insertion_sites_diff_participants %>% select(insertion_token) %>% unique() %>% nrow()
 
+# 254
+
 ```
 
 
@@ -217,6 +236,17 @@ shared_insertion_sites_diff_participants %>% select(insertion_token) %>% unique(
 
 shared_insertion_sites_diff_participants %>% select(insertion_token, seqtype, splice_type, num_participants_shared_insertion) %>% unique() %>%
   group_by(seqtype, splice_type) %>% tally()
+
+
+#seqtype splice_type n
+# HYB	.	44		
+# HYB	GT-AG	2		
+# RNA	.	86		
+# RNA	GC-AG	2		
+# RNA	GT-AG	71		
+# WGS	.	6		
+# WXS	.	62		
+# WXS	GT-AG	1	
 
 ```
 
@@ -227,6 +257,12 @@ shared_insertion_sites_diff_participants %>% select(insertion_token, seqtype, sp
 shared_insertion_sites_diff_participants %>% 
   select(insertion_token, splice_type, num_participants_shared_insertion) %>%  unique() %>%
   group_by(splice_type) %>% tally()
+
+
+# splice_type  n
+# .	179			
+# GC-AG	2			
+# GT-AG	73	
 
 ```
 
@@ -245,7 +281,7 @@ shared_insertion_sites_diff_participants = shared_insertion_sites_diff_participa
 
 shared_insertion_sites_diff_participants %>% select(insertion_token, virus_coord, seqtype, total, total_rpm, frac_dominant_total_rpm, suspicious, num_participants_shared_insertion, sample_name,  contig)                                
                                          
-
+# 690 rows
 
 ```
 
@@ -275,6 +311,9 @@ shared_insertion_sites_diff_participants  %>% select(participant, insertion_toke
   unique() %>%
   group_by(suspicious) %>% tally()
 
+# suspicious  n
+# FALSE	616			
+# TRUE	74	
 
 ```
 
@@ -284,11 +323,20 @@ shared_insertion_sites_diff_participants  %>% select(participant, insertion_toke
 shared_insertion_sites_diff_participants %>% filter(suspicious) %>%
   select(insertion_token, virus_coord, seqtype, total, total_rpm, frac_dominant_total_rpm, num_participants_shared_insertion, sample_name,  contig) 
 
+# 74 rows
+
 ```
 
 ```{r}
 
 shared_insertion_sites_diff_participants %>% filter(suspicious) %>% group_by(seqtype, cohort) %>% tally()
+
+
+# seqtype  cohort  n
+# HYB	NATGEN2015	17		
+# RNA	CCLE	1		
+# RNA	TCGA	10		
+# WXS	TCGA	46	
 
 ```
 
@@ -309,13 +357,20 @@ repr_virus_breakend_data = insertions_data %>%
                        arrange(desc(total_rpm)) %>% filter(row_number() == 1) %>% ungroup() 
 nrow(repr_virus_breakend_data)
 
+# 22874
+
 repr_virus_breakend_data = repr_virus_breakend_data %>%
                       # select best per virus, human_coord (dealing with EBV multistrain issue)
                        group_by(sample_id, virus, humanchr, human_coord, cohort, seqtype) %>%
                        arrange(desc(total_rpm)) %>% filter(row_number() == 1) %>% ungroup() 
 nrow(repr_virus_breakend_data)
+
+# 22588
                       
 nrow(insertions_data)
+
+# 33892
+
 insertions_data = left_join(insertions_data,
                             repr_virus_breakend_data %>% mutate(repr_virus_breakend = TRUE) %>% 
                               select(sample_id, virus, humanchr, human_coord, cohort, virus_brkend_grp, seqtype, repr_virus_breakend),
@@ -323,6 +378,7 @@ insertions_data = left_join(insertions_data,
   mutate(repr_virus_breakend = ifelse(is.na(repr_virus_breakend), FALSE, repr_virus_breakend))
 
 nrow(insertions_data)
+# 33892
 
 write.table(insertions_data, 
             file="all_insertions_and_virus_content_merged.w_shared_site_info.tsv", quote=F, sep="\t", row.names=F)
