--- a/Combined_VIF_analysis/SampleCounting.Rmd
+++ b/Combined_VIF_analysis/SampleCounting.Rmd
@@ -17,11 +17,16 @@ library(tidyverse)
 
 all_samples_processed_info = read.table("all_samples_processed.tsv", header=T, sep="\t", stringsAsFactors = F)
 
-num_samples = all_samples_processed_info %>% select(sample_name, seqtype) %>% unique() %>% nrow()
+nrow(all_samples_processed_info)
+# 33397
+
+num_samples = all_samples_processed_info %>% select(sample_id, seqtype) %>% unique() %>% nrow()
 message("num samples: ", num_samples)
+# 33397
 
 num_participants = all_samples_processed_info %>% select(participant) %>% unique() %>% nrow()
 message("num participants: ", num_participants)
+# 13408
 
 
 ```
