--- a/NatGenetics2015_reanalysis/NatGenetics2015_VIF/compare_VIF_vs_published_insertions/compare_VIF_to_published_NatGenet2015.SangerValidated.Rmd
+++ b/NatGenetics2015_reanalysis/NatGenetics2015_VIF/compare_VIF_vs_published_insertions/compare_VIF_to_published_NatGenet2015.SangerValidated.Rmd
@@ -39,6 +39,8 @@ published_insertions = published_insertions %>%
 
 
 nrow(published_insertions)
+
+# 175
 ```
 
 
@@ -55,6 +57,8 @@ published_insertions = left_join(published_insertions, all_published_insertions_
 
 nrow(published_insertions
      )
+
+# 175
 ```
 
 
@@ -69,6 +73,8 @@ published_insertions = published_insertions %>% mutate(bin = round(hg38_Coord / 
 
 nrow(published_insertions)
 
+# 127
+
 ```
 
 
@@ -82,6 +88,8 @@ vif_insertions = vif_insertions %>% mutate(sample_id = sample_label_short)
 
 nrow(vif_insertions)
 
+# 17928
+
 ```
 
 ```{r}
@@ -94,6 +102,7 @@ vif_insertions = vif_insertions %>% mutate(bin = round(human_coord / BINSIZE) ) 
 
 nrow(vif_insertions)
 
+# 16899
 
 ```
 
@@ -105,21 +114,24 @@ nrow(vif_insertions)
 published_insertions_sample_ids = published_insertions %>% select(sample_id) %>% unique() %>% pull(sample_id)
 
 message("published sample_ids with insertions: ", length(published_insertions_sample_ids))
+# 52
 
 vif_insertions_sample_ids = vif_insertions %>% select(sample_id) %>% unique() %>% pull(sample_id)
 
 message("vif sample_ids with insertions: ", length(vif_insertions_sample_ids) )
-
+# 125
 
 sample_ids_common = intersect(published_insertions_sample_ids,
                        vif_insertions_sample_ids)
 
 message("num sample_ids in common: ", length(sample_ids_common))
+# 51
 
 message("samples missing from vif but in published ", paste(setdiff( published_insertions_sample_ids, vif_insertions_sample_ids), collapse=' '))
+# 512
 
 message("those sample_ids in published but not in vif: ", paste(setdiff(published_insertions_sample_ids, vif_insertions_sample_ids), collapse=" ") )
-
+# 512
 
 ## missing S12 in hivid for vif
 
@@ -130,10 +142,11 @@ message("those sample_ids in published but not in vif: ", paste(setdiff(publishe
 
 vif_insertions = vif_insertions %>% filter(sample_id %in% sample_ids_common)
 message("count vif insertions among common samples: ", nrow(vif_insertions))
+# 7077
 
 published_insertions= published_insertions %>% filter(sample_id %in% sample_ids_common)
 message("count published insertions among common samples: ", nrow(published_insertions))
-
+# 125
 
 ```
 
@@ -245,7 +258,8 @@ for (min_read_support in min_read_supports) {
 
 published_with_nearest_vif_min_support_df
 
-
+# 92 agree
+# 92/127 = 72%
 ```
 
 ```{r}
@@ -282,6 +296,7 @@ totals = published_with_nearest_vif %>%
 
 cor.test(totals$total, totals$pub_total)
 
+# R=0.92
 
 ```
 
