--- a/InstitutCurie/CurieCohortAnalysis.Rmd
+++ b/InstitutCurie/CurieCohortAnalysis.Rmd
@@ -319,7 +319,7 @@ for (tissue_type in tissue_types) {
 
     #plot(p2)
     
-    p = tissue_type_data %>% ggplot(aes(x=virus, y=mapped)) + geom_boxplot() + ggtitle(tissue_id) +
+    p = tissue_type_data %>% ggplot(aes(x=virus, y=mapped)) + geom_boxplot() + ggtitle(tissue_type) +
         theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5, size=rel(0.7) ))
     #plot(p)
     
